--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "devDependencies": {
     "@ckeditor/ckeditor5-adapter-ckfinder": "^11.0.1",
+    "@ckeditor/ckeditor5-alignment": "^11.1.0",
     "@ckeditor/ckeditor5-autoformat": "^11.0.1",
     "@ckeditor/ckeditor5-basic-styles": "^11.1.0",
     "@ckeditor/ckeditor5-block-quote": "^11.0.1",
@@ -36,6 +37,7 @@
     "@ckeditor/ckeditor5-easy-image": "^11.0.1",
     "@ckeditor/ckeditor5-editor-classic": "^12.1.0",
     "@ckeditor/ckeditor5-essentials": "^11.0.1",
+    "@ckeditor/ckeditor5-font": "^11.1.0",
     "@ckeditor/ckeditor5-heading": "^11.0.1",
     "@ckeditor/ckeditor5-image": "^13.0.1",
     "@ckeditor/ckeditor5-link": "^11.0.1",
@@ -43,6 +45,7 @@
     "@ckeditor/ckeditor5-media-embed": "^11.1.0",
     "@ckeditor/ckeditor5-paragraph": "^11.0.1",
     "@ckeditor/ckeditor5-paste-from-office": "^11.0.1",
+    "@ckeditor/ckeditor5-remove-format": "^10.0.0",
     "@ckeditor/ckeditor5-table": "^12.0.1",
     "@ckeditor/ckeditor5-theme-lark": "^13.0.1",
     "eslint": "^5.5.0",
@@ -86,5 +89,6 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  }
+  },
+  "dependencies": {}
 }
